--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,1 +1,10 @@
-All authors
+<h2>Serach Authors</h2>
+<form action="/authors" method="GET">
+  <label for="name"> Name</label>
+  <input type="text" name="name" />
+  <button type="submit">Search</button>
+</form>
+<br />
+<% authors.forEach(author => {%>
+<div><%= author.name %></div>
+<% }); %>
