--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,1 +1,8 @@
-new author displayed
+<h2>New Author</h2>
+
+<form action="/authors" method="POST">
+  <%-include('_form_fields') %>
+  <a href="/authors">Cancel</a>
+
+  <button type="submit">Create</button>
+</form>
